--- a/name/main.tex
+++ b/name/main.tex
@@ -382,37 +382,11 @@ One noticeable difference between CARS and MOM01 is at the Cape Leeuwin section.
 In the next sub-Section, we identify this vertically coherent eastward jet as the southern arm of the anti-cyclonic Albany High (\citeauthor{Middleton2003} \citeyear{Middleton2003}, \citeauthor{Middleton2007} \citeyear{Middleton2007}, \citeauthor{McCartney2007} \citeyear{McCartney2007}) clearly visible off Cape Leeuwin and Pasley in MOM01 (and, off Cape Pasley in CARS too).
 
 \subsubsection{Depth-integrated velocity maps}\label{Depth-integrated velocity maps}
-Maps of depth-integrated velocity allow the horizontal structure of the currents to be examined (Fig.\,\ref{f03_fig1_}). In CARS, the eastward flow of the SBC is interrupted by reversals, notably near Albany, between Cape Carnot and Cape Jaffa, and west of Tasmania (Fig.\,\ref{f03_fig1_}a). In MOM01, on the other hand, the SBC flow continuously eastward (Fig.\,\ref{f03_fig1_}c). Overall, the SBCs' magnitude and width agree well between the CARS and MOM01.
-The localised SBC reversals are probably due to the CARS mean field capturing some of the shelf's intense eddy activity (see Section\,\ref{Datasets}), which was observed in MOM01 on 5-day average timescales (not shown).
+We now examine the upper and lower layer velocity fields in depth-integrated velocity maps (Fig.\,\ref{f03_fig1_}). In CARS, the SBC eastward flow is interrupted by reversals, notably near Albany, between Cape Carnot and Cape Jaffa, and west of Tasmania (Fig.\,\ref{f03_fig1_}a). In addition to CARS caveats described in Section\,\ref{Datasets}, localised SBC reversals there may due to the mean field capturing some of the intense eddy activity over the shelf, which was observed in MOM01 on 5-day average timescales (not shown). Regardless, the SBC magnitude and width agree well between CARS and MOM01. In MOM01, the SBC flow is a narrow, continuous eastward boundary current (Fig.\,\ref{f03_fig1_}c).
 
-The narrow slope-FC is not visible in Fig.\,\ref{f03_fig1_} and we focus on the offshore-FC's wide horizontal structure.
-In CARS, the offshore-FC in the upper layer is weak and locally reversed along the slanted coast (Fig.\,\ref{f03_fig1_}a). West of Cape Carnot however, the FC firmly emerges as a wide westward flow.
-In the CARS lower layer, the FC is a continuous westward flow all along the south margin of Australia (Fig.\,\ref{f03_fig1_}b) although it is still weak and variable east of Cape Carnot.
-In both layers, part of the Tasman Leakage turns northwestward and is a source water for the FC\@.
-In MOM01, the Tasman Leakage mostly outflows due westward both in the upper (Fig.\,\ref{f03_fig1_}c) and lower (Fig.\,\ref{f03_fig1_}d) layers. The FC is thus very weak west of Tasmania and along western Bass Strait in both the upper and lower layers, and even becomes eastward in places. The FC only emerges as a clear westward flow near Cape Jaffa, and continues to strengthen moving westward in both layers. 
-Further west, the FC in CARS
-is strong and spread out meridionally downstream of Albany whereas in MOM01 it is weaker and flowing zonally without spreading.
+The narrow slope-FC is not visible, so we next analyse the offshore-FC wide horizontal structure. Along the slanted shelf and in the upper layer, the FC is weak and locally reversed in CARS and MOM01. In the lower layer, the FC is continuous in CARS (Fig.\,\ref{f03_fig1_}b) and more coherent in MOM01 (Fig.\,\ref{f03_fig1_}d), perhaps because the deep flow is less affected by surface intensified mesoscale structures. Along the zonal shelf, the FC firmly emerges as a wide, westward-intensifying westward flow in both layers.
 
-The long-term average MOM01 field is generally much smoother than that from CARS\@. In MOM01, the eastward jet south of the FC is particularly clear.
-In the upper layer, the eastward jet flows zonally from the interior of the southern Indian Ocean along the southern edge of FC (Fig.\,\ref{f03_fig1_}c). East of the Bight, the eastward jet bends along the slanted margin, but part of the eastward flow retroflects westward to join the FC\@.
-The eastward jet is vertically coherent over \SI{2000}{\meter} depth, at least until the eastern Great Australian Bight section (\ang{132}E) as shown in the lower layer velocities (Fig.\,\ref{f03_fig1_}d). In CARS, the eastward jet is observed along the south coast of Australia but not west of Cape Leeuwin (Fig.\,\ref{f03_fig1_}a,b) due to the offshore spreading of the FC
-which was found earlier (Fig.\,\ref{f02_fig1_}a). South of Australia, the structure of the jet is also
-less coherent
-than in MOM01
-but it still flows south of the FC and
-joins the FC along the slanted coast.
-
-To summarise this analysis, in CARS the annual-mean SBC are effectively a continuous eastward flow all along the south coast of Australia with a few localised reversals.
-In the CARS the upper layer (surface to \SI{250}{\meter}), the FC is weakly westward along the slanted shelf and firmly westward downstream from the Great Australian Bight and along the zonal coast. Underneath in the lower layer (\SI{250}{\meter} to \SI{2000}{\meter}), the offshore-FC is continuously westward along the southern slope of Australia. In both layers, the Tasman Leakage is
-a substantial source of water for the FC\@.
-In MOM01, the slanted FC effectively emerges near Cape Jaffa (downstream of western Bass Strait) and gains in intensity in the Great Australian Bight and along the zonal shelf. Overall, CARS showed stronger currents, a locally disconnected SBC and a unique deep-reaching FC from South East Cape to Cape Leeuwin. MOM01 showed weaker currents, but generally more coherent flows,
-hence more clearly revealing the
-components of the Southern Australia Current System. 
-
-The model revealed an unreported eastward jet south of the FC and adjacent to it. The jet flows eastward in the zonal sector and bends south-eastward in the slanted sector. This south-eastward jet along the slanted coast is weaker and eventually flows over the slanted FC west of the Bass Strait and Tasmania, disrupting the FC there.
-The eastward jet is vertically coherent and found
-in both layers in the zonal sector. Along the slanted shelf the eastward jet becomes fragmentary in the lower layer.
-In CARS, the eastward jet is also observed but is less horizontally coherent and perhaps is overwhelmed by the FC west of Albany.
+Further offshore, the long-term average field tends to reveal mesoscale structures in CARS and laminar flows in MOM01\@. For example, in CARS, the eastward jet south of the FC is vertically coherent but horizontally patchy, and absent off Cape Leeuwin, due to the FC offshore spreading found earlier (Fig.\,\ref{f02_fig1_}a). In MOM01, the eastward jet is coherent horizontally and vertically, at least until the Great Australian Bight. At South East Cape, the Tasman Leakage outflows via westward-flowing meandering structures in CARS, whereas it outflows mostly due westward in MOM01. In both layers and datasets, the Tasman Leakage flows away from the western Tasmanian shelf and whether some flow is carried into the FC is unclear from these velocity fields. The transport budget in Section\,\ref{Southern Australia Current System Transport Budget} provides insights into the Tasman Leakage-to-FC connection.
 
 \subsubsection{Vertical flows in MOM01} \label{Vertical flows in MOM01}
 This section briefly examines vertical flow between the SBC 
