--- a/name/main.tex
+++ b/name/main.tex
@@ -389,17 +389,9 @@ The narrow slope-FC is not visible, so we next analyse the offshore-FC wide hori
 Further offshore, the long-term average field tends to reveal mesoscale structures in CARS and laminar flows in MOM01\@. For example, in CARS, the eastward jet south of the FC is vertically coherent but horizontally patchy, and absent off Cape Leeuwin, due to the FC offshore spreading found earlier (Fig.\,\ref{f02_fig1_}a). In MOM01, the eastward jet is coherent horizontally and vertically, at least until the Great Australian Bight. At South East Cape, the Tasman Leakage outflows via westward-flowing meandering structures in CARS, whereas it outflows mostly due westward in MOM01. In both layers and datasets, the Tasman Leakage flows away from the western Tasmanian shelf and whether some flow is carried into the FC is unclear from these velocity fields. The transport budget in Section\,\ref{Southern Australia Current System Transport Budget} provides insights into the Tasman Leakage-to-FC connection.
 
 \subsubsection{Vertical flows in MOM01} \label{Vertical flows in MOM01}
-This section briefly examines vertical flow between the SBC 
-and slope-FC\@. Fig.\,\ref{f07_fig1_} shows meridional sections of vertical and zonal components of velocity from MOM01 zoomed in on the shelf break
-and the upper slope.
-Here, the blue-red shading illustrates vertical flows and the contours show zonal velocities.
+This section briefly examines vertical flows between the SBC and slope-FC\@. Fig.\,\ref{f07_fig1_} shows meridional sections of vertical and zonal velocity component from MOM01, zoomed into the shelf break and the upper slope. This time, blue-red shadings illustrate vertical flows and contours show zonal velocities.
 
-Our sections show strong downwelling flows
-near the shelf break and upper slope.
-These flows are located approximately
-on the seaward side and lower portion of the SBC\@.
-They are strong between \num{100} and \SI{600}{\meter} and generally intrude into most of the slope-FC, which is centered between \num{500} and \SI{600}{\meter} (Fig.\,\ref{f07_fig1_}a,e,f,g). The Leeuwin Current Extension exhibits a strong downwelling into the slope-FC at Cape Leeuwin (Fig.\,\ref{f07_fig1_}a) with speeds greater than \SI{-50 e-4}{\centi\meter\per\second}.
-In the Great Australian Bight sections, the downwelling decreases. In the eastern Bight section (Fig.\,\ref{f07_fig1_}d), where the upper slope is gentle and the slope-FC is absent, an upwelling flow dominates at the South Australian Current bottom boundary. In the subsequent slanted shelf sections at Cape Carnot, Portland and King island (Fig.\,\ref{f07_fig1_}e,f,g) the downwelling is greater than \SI{-20 e-4}{\centi\meter\per\second} and generally stronger than that along the zonal shelf sections (Fig.\,\ref{f07_fig1_}b,c,d, Cape Leeuwin section excluded). Off South East Cape (Fig.\,\ref{f07_fig1_}h), the downwelling dominates the upper \SI{1000}{\meter} and flows through the onshore portion of the Tasman Leakage.
+Our sections show strong downwelling flows near the shelf break and upper slope. These flows are located approximately on the seaward side and lower portion of the SBC\@. They are strong between \num{100} and \SI{600}{\meter} and generally intrude into most of the slope-FC (Fig.\,\ref{f07_fig1_}a,e,f,g). The Leeuwin Current Extension exhibits a strong downwelling into the slope-FC at Cape Leeuwin (Fig.\,\ref{f07_fig1_}a) with speeds greater than \SI{-50 e-4}{\centi\meter\per\second}. In the eastern Bight section (Fig.\,\ref{f07_fig1_}d), where the upper slope is gentle and the slope-FC is absent, an upwelling flow dominates at the South Australian Current bottom boundary. In the subsequent slanted shelf sections at Cape Carnot, Portland and King island (Fig.\,\ref{f07_fig1_}e,f,g) the downwelling is greater than \SI{-20 e-4}{\centi\meter\per\second} and generally stronger than that along the zonal shelf sections (Fig.\,\ref{f07_fig1_}b,c,d, Cape Leeuwin section excluded). Off South East Cape (Fig.\,\ref{f07_fig1_}h), the downwelling dominates the upper \SI{1000}{\meter} and flows through the onshore portion of the Tasman Leakage.
 %
 \begin{figure}[p]
 \centering%
@@ -410,31 +402,21 @@ In the Great Australian Bight sections, the downwelling decreases. In the easter
   Meridional sections along southern Australia of vertical and zonal full velocities in MOM01, zoomed over the shelf break region. Vertical velocities $w$ in $10^{-4}$ \si{\centi\meter\per\second} (shadings) and zonal velocities $u$ in \si{\centi\meter\per\second} (contours, every \SI{2}{\centi\meter\per\second}, thick solid lines show positive values, thick dashed lines show negative values, thin solid lines show zero contour). Boundaries of the SBC as follows: $y\sub{CC}$ (green) is the SBC north boundary; $z\sub{int}$ (blue) is the SBC bottom boundary and the FC top boundary; $y\sub{int}$ (red) is the SBC south boundary and the FC north boundary.}
 \end{figure}
 
-The slope-FC co-exists with the SBC downwelling coming from above. At the only section where the slope-FC is absent (off the eastern Great Australian Bight Fig.\,\ref{f07_fig1_}d), the vertical flow is upwelling.
-This suggests that downwelling is important to maintain the slope-FC\@.
-%
+The slope-FC co-exists with the SBC downwelling coming from above. At the only section where the slope-FC is absent (off the eastern Great Australian Bight Fig.\,\ref{f07_fig1_}d), the vertical flow is upwelling. This suggests that downwelling is important to maintain the slope-FC\@.
 Within the lower portion of the FC, a deep upwelling generally exists along the zonal shelf sections and at Cape Carnot (Fig.\,\ref{f07_fig1_}a--e).
-In the remaining slanted sections, a weak upwelling exists deeper than \SI{1000}{\meter} (not shown) while
-the layer above it is dominated by SBC downwelling.
-%
-This configuration consisting of a downwelling shelf break current and an upwelling counter-flowing undercurrent (slope current) was also described in \citepos{Woo2008} analysis of the Leeuwin Current System along western Australia who also conjectured that the SBC--slope-FC pair essentially has the same structure as the Leeuwin Current--Leeuwin Undercurrent pair.
+In the remaining slanted sections, a weak upwelling exists deeper than \SI{1000}{\meter} (not shown) while the layer above it is dominated by SBC downwelling. This configuration consisting of a downwelling shelf break current and an upwelling counter-flowing undercurrent (slope current) was also described in \citepos{Woo2008} analysis of the Leeuwin Current System along western Australia who also conjectured that the SBC--slope-FC pair essentially has the same structure as the Leeuwin Current--Leeuwin Undercurrent pair.
 
-To summarise, downwelling flows exist in the lower and seaward portion of the SBC and intrude into the slope-FC\@.
-The downwelling flows cover most of the slope-FC, but 
-in one section off the eastern Great Australian Bight section, the slope is gentler, the slope-FC is absent, and the vertical flows at the SBC bottom are upwelling. This suggests that both the downwelling and the slope-FC exist where the continental slope is steep. The downwelling is strong at Cape Leeuwin (greater than \SI{-50 e-4}{\centi\meter\per\second}) and extends deeper off the slanted shelf sections (speed greater than \SI{-20 e-4}{\centi\meter\per\second}) and off South East Cape where they dominate the upper \SI{1000}{\meter}. 
+To summarise, downwelling flows exist in the lower and seaward portion of the SBC and intrude into the slope-FC\@. The downwelling flows cover most of the slope-FC, but in one section off the eastern Great Australian Bight section, the slope is gentler, the slope-FC is absent, and the vertical flows at the SBC bottom are upwelling. This suggests that both the downwelling and the slope-FC exist where the continental slope is steep. The downwelling is strong at Cape Leeuwin (greater than \SI{-50 e-4}{\centi\meter\per\second}) and extends deeper off the slanted shelf sections (speed greater than \SI{-20 e-4}{\centi\meter\per\second}) and off South East Cape where they dominate the upper \SI{1000}{\meter}. 
 
 \subsection{Southern Australia Current System Transport Budget} \label{Southern Australia Current System Transport Budget}
 The CARS and MOM01 long-term mean transport budget (Fig.\,\ref{f04_fig1_}) as derived from the equations in Section~\ref{Transport budget derivation} is analysed for the SBC (Section~\ref{SBC budget}) and the FC (Section~\ref{FC budget}). This budget describes the evolution of the transports for the SBC ($\mathcal{U}\sub{SBC}$, Eq.\,\ref{eq:3}) and the FC ($\mathcal{U}\sub{FC}$, Eq.\,\ref{eq:7});
 it also describes
 horizontal and vertical inflows into or outflows out of
 the SBC which are referenced in Fig.\,\ref{f04_fig1_} ($\mathcal{V}\sub{CC}$, Eq.\,\ref{eq:4}; $\mathcal{V}\sub{SBC}$, Eq.\,\ref{eq:5}; $\mathcal{W}\sub{SBC}$, Eq.\,\ref{eq:6}) and
-the FC ($\mathcal{V}\sub{OF}$, Eq.\,\ref{eq:8}; $\mathcal{V}\sub{FC}$, Eq.\,\ref{eq:9}; $\mathcal{W}\sub{FC}$, Eq.\,\ref{eq:10}).
-We recall that the sign convention for the zonal transports (Eq.\,\ref{eq:3} and \ref{eq:7}) is that positive means an eastward current. For the cumulative, cross-boundary transports in the horizontal and vertical directions (Eqs.\,\ref{eq:4}, \ref{eq:5}, \ref{eq:6}, \ref{eq:8}, \ref{eq:9} and \ref{eq:10}), positive means into the boundary current and negative means out of the boundary current. Fig.\,\ref{SACS_complex} summarizes the structure of the Southern Australia Current System in detail from both CARS and MOM01. The transport numbers for the model are from the MOM01 full velocity field. This analysis is further summarised and simplified in Section~\ref{Summary} and Fig.\,\ref{Slide1}.
+the FC ($\mathcal{V}\sub{OF}$, Eq.\,\ref{eq:8}; $\mathcal{V}\sub{FC}$, Eq.\,\ref{eq:9}; $\mathcal{W}\sub{FC}$, Eq.\,\ref{eq:10}). This analysis is further summarised and simplified in Section~\ref{Summary} and Fig.\,\ref{Slide1}.
 
 \subsubsection{SBC budget}\label{SBC budget}
-The SBC transport $\mathcal{U}\sub{SBC}$ (Eq.\,\ref{eq:3}, Fig.\,\ref{f04_fig1_}a black lines) exhibits significantly higher variations in CARS than in MOM01, particularly in the Leeuwin Current Extension (see also Fig.\,\ref{f03_fig1_}).
-High variations are probably due to the mean CARS data being locally biased towards particular transient, seasonal or inter-annual events. Nonetheless, the trend of the South Australian Current and the Zeehan Current transport in CARS
-roughly agrees with those in MOM01. It is worth noting here that in MOM01, the transport adjusted via the Zero Divergence method (i.e., Ekman plus geostrophic transport from the Zero Divergence method applied to the model's temperature and salinity field and wind data) agrees very well with the full transport determined from the model's full velocity field. In the full MOM01 transport, the Leeuwin Current Extension decreases from $\mathcal{U}\sub{SBC} =$ \num{1.1} to about \SI{0.1}{Sv}, the South Australian Current fluctuates with the transport across the zonal shelf remaining stable and that across the the slanted shelf increasing to \SI{0.3}{Sv}, and the Zeehan Current slightly increasing to about \SI{0.4}{Sv} (Fig.\,\ref{SACS_complex}).
+The SBC transport $\mathcal{U}\sub{SBC}$ (Eq.\,\ref{eq:3}, Fig.\,\ref{f04_fig1_}a black lines) exhibits significantly higher variations in CARS than in MOM01, particularly in the Leeuwin Current Extension (see also Fig.\,\ref{f03_fig1_}, see Section\,\ref{Southern Australia Current System Structure} for CARS versus MOM01 discussion). Nonetheless, the trend of the South Australian Current and the Zeehan Current transport in CARS roughly agrees with those in MOM01. Because transport variability is stronger in CARS, we describe the transport evolution and changes from full transport in MOM01, simply because it is easier to identify them in MOM01. It is worth noting here that in MOM01, the transport adjusted via the Zero Divergence method (i.e., Ekman plus geostrophic transport from the Zero Divergence method applied to the model's temperature and salinity field and wind data) agrees very well with the full transport determined from the model's full velocity field. The Leeuwin Current Extension decreases from $\mathcal{U}\sub{SBC} =$ \num{1.1} to about \SI{0.1}{Sv}, the South Australian Current fluctuates with the transport across the zonal shelf remaining stable and that across the the slanted shelf increasing to \SI{0.3}{Sv}, and the Zeehan Current slightly increasing to about \SI{0.4}{Sv}.
 %
 \begin{figure}[p]
 \noindent\includegraphics
@@ -443,38 +425,20 @@ roughly agrees with those in MOM01. It is worth noting here that in MOM01, the t
 \caption{\label{f04_fig1_}%
   Southern Australia Current System transport budget ($Sv$) for (a) the SBC transport (black, positive eastward) and the horizontal cumulative (west to east) cross-boundary transport along $y\sub{CC}$ (green, positive into the SBC), (b) the SBC cumulative (west to east) cross-boundary transport exchanged with the FC horizontally across $y\sub{int}$ (red, positive into the SBC) and vertically across $z\sub{int}$ (blue, positive into the SBC), (c) the FC transport (black, positive eastward), cumulative (east to west) cross-boundary transports with the SBC (red and blue, positive into the FC), and cumulative (east to west) cross-boundary horizontal transport along $y\sub{OF}$ (magenta, positive into the FC). Results are shown for the "Zero Divergence" (ZD, \citeauthor{Furue2017} \citeyear{Furue2017}) adjusted transports in the observations (solid lines) and in the model (dashed lines), and also the actual model transports (thin dotted line). The thin dotted cyan line shows the actual model vertical transport at the bottom of the FC (this is absent in the geostrophic transport). The vertical solid gray lines separate the Leeuwin Current Extension, South Australian Current and Zeehan Current and the vertical dashed grey line separates the region with a zonal shelf to the west from the region with a slanted shelf to the east.}
 \end{figure}
-%
-\begin{figure}[p]
-\noindent\includegraphics
-[width=1\textheight, height=\textwidth, keepaspectratio, angle=90]
-{SACS_complex.jpg}
-\caption{\label{SACS_complex}%
-  Comprehensive Southern Australia Current System transport budget schematics ($Sv$). Transport estimates from MOM01 reported in Section~\ref{Southern Australia Current System Transport Budget} are illustrated here. The SBC transport $\mathcal{U}\sub{SBC}$ (Eq.\,\ref{eq:3}) is shown in the grey box with a black outline. The FC transport $\mathcal{U}\sub{FC}$ (Eq.\,\ref{eq:7}) is shown in the grey box with a white outline. The transport exchanges feeding into the SBC or the FC are shown as plain white or black numbers.}
-\end{figure}
 
-The cumulative cross-boundary transport between the coastal current and SBC $\mathcal{V}\sub{CC}$ (Eq.\,\ref{eq:4}, Fig.\,\ref{f04_fig1_}a green lines) in CARS generally exhibits a net inflow into the SBC along the zonal shelf west of \ang{132}E and a net outflow from the SBC along the slanted shelf east of \ang{132}E. These exchanges in the Great Australian Bight and Gulf regions are much weaker in MOM01 with a weak net inflow up to $\mathcal{V}\sub{CC} =$ +\SI{0.1}{Sv}. Since the Bight and Gulfs region
-is land-locked, this net transport returns to zero at Cape Jaffa (\ang{139}E)
- and hence this pair of inflow and outflow represents a mean counter-clockwise circulation over the shelf within the Bight and Gulfs.
-Over Bass Strait,
-there is a net outflow from the SBC of \SI{0.2}{Sv} (Fig.\,\ref{SACS_complex}) in MOM01,
-which is half that in CARS\@.
+The cumulative cross-boundary transport between the coastal current and SBC $\mathcal{V}\sub{CC}$ (Eq.\,\ref{eq:4}, Fig.\,\ref{f04_fig1_}a green lines) are weak in the Great Australian Bight and Gulf regions with a net exchanges up to $\mathcal{V}\sub{CC} =$ +\SI{0.1}{Sv}. Over Bass Strait, there is a net outflow from the SBC of \SI{0.2}{Sv}. The cumulative cross-boundary transport between the SBC and the FC are presented in Fig.\,\ref{f04_fig1_}b.
+On average the Leeuwin Current Extension loses water horizontally to the FC as the cumulative horizontal transport ($\mathcal{V}\sub{SBC}$, Eq.\,\ref{eq:5}, Fig.\,\ref{f04_fig1_}b red lines) is negative in the entire Leeuwin Current Extension region. Specifically, the Leeuwin Current Extension loses $\mathcal{V}\sub{SBC} = \SI{-0.5}{Sv}$ up to \ang{119}E near Albany, which indicates
+that the Leeuwin Current partly outflows horizontally into the offshore-FC as it turns around the south-west corner of Australia to become the Leeuwin Current Extension\@. East of Albany, the opposite happens where the upper offshore-FC generally feeds horizontally into the SBC\@. The total horizontal inflow into the SBC from Cape Leeuwin to South East Cape is +\SI{1.5}{Sv}.
 
-The cumulative cross-boundary transport between the SBC and the FC are presented in Fig.\,\ref{f04_fig1_}b. As seen in the SBC transport, the Leeuwin Current Extension is a region of large difference
-between CARS and MOM01,
-which is reflected in both the horizontal exchanges with the FC along the SBC south boundary $\mathcal{V}\sub{SBC}$ (Eq.\,\ref{eq:5}, Fig.\,\ref{f04_fig1_}b red lines) and the vertical exchanges with the FC along the SBC bottom boundary $\mathcal{W}\sub{SBC}$ (Eq.\,\ref{eq:6}, Fig.\,\ref{f04_fig1_}b blue lines).
-Further east, the downstream trends in the horizontal and vertical exchanges agree reasonably well between CARS and MOM01.
-In MOM01, on average the Leeuwin Current Extension loses water horizontally to the FC as the cumulative horizontal transport is negative in the entire Leeuwin Current Extension region. Specifically, the Leeuwin Current Extension loses $\mathcal{V}\sub{SBC} = \SI{-0.5}{Sv}$ up to \ang{119}E near Albany (Fig.\,\ref{SACS_complex}), which indicates
-that the Leeuwin Current partly outflows horizontally into the offshore-FC as it turns around the south-west corner of Australia to become the Leeuwin Current Extension\@. East of Albany, the opposite happens where the upper offshore-FC generally feeds horizontally into the SBC\@. In Fig.\,\ref{SACS_complex} we report the horizontal inflows from the FC into each of the SBC. The total horizontal inflow into the SBC from Cape Leeuwin to South East Cape is +\SI{1.5}{Sv}.
-
-The model vertical exchanges between the SBC and the FC reveal a persistent downwelling out of the SBC that increases steadily from west to east \@. To this downwelling, the Leeuwin Current Extension contributes $\mathcal{W}\sub{SBC} =$ \SI{-0.8}{Sv}, the South Australian Current \SI{-0.7}{Sv} and the Zeehan Current \SI{-0.5}{Sv} (Fig.\,\ref{SACS_complex}). This provides a total downwelling of \SI{-2}{Sv} out of the SBC between Cape Leeuwin and South East Cape (Fig.\,\ref{Slide1}).
+The model vertical exchanges between the SBC and the FC ($\mathcal{W}\sub{SBC}$, Eq.\,\ref{eq:6}, Fig.\,\ref{f04_fig1_}b blue lines) reveal a persistent downwelling out of the SBC that increases steadily from west to east \@. To this downwelling, the Leeuwin Current Extension contributes $\mathcal{W}\sub{SBC} =$ \SI{-0.8}{Sv}, the South Australian Current \SI{-0.7}{Sv} and the Zeehan Current \SI{-0.5}{Sv}. This provides a total downwelling of \SI{-2}{Sv} out of the SBC between Cape Leeuwin and South East Cape (Fig.\,\ref{Slide1}).
 Eighty percent of the decrease in the Leeuwin Current Extension's transport from
 $\mathcal{U}\sub{SBC} = \num{1.1}$ to \SI{0.1}{Sv} is
 due to the downwelling.
-The zonal South Australian Current's steady transport of \SI{0.1}{Sv} is maintained by compensating lateral inflows that balance the downwelling in this region. The weak increase
+The zonal South Australian Current's steady transport is maintained by compensating lateral inflows that balance the downwelling in this region. The weak increase
 in the slanted South Australian Current's transport and the Zeehan Current's transport is essentially due to an increase in lateral inflows.
 
 To summarise, as the Leeuwin Current Extension flows around the southwest corner of Australia, it loses most of its transport due to downwelling
- and lateral offshore flow.
+ nd lateral offshore flow.
 Then the downwelling is reduced and the western South Australian Current flows along the zonal shelf break without much systematic change in its transport.
 As the South Australian Current flows over the slanted shelf break, it receives progressively increasing lateral inflows which are partly overturned by weakly increasing downwelling flows, resulting in a stronger slanted South Australian Current\@.
 The Zeehan Current grows
@@ -490,19 +454,16 @@ back into the FC and a weak lateral $\mathcal{V}\sub{CC} = \SI{-0.2}{Sv}$ shallo
 The FC and cross-boundary cumulative transports are presented in Fig.\,\ref{f04_fig1_}c.
 The transport $\mathcal{U}\sub{FC}$ (Eq.\,\ref{eq:7}, Fig.\,\ref{f04_fig1_}c black lines) displays large variations in CARS
 as for the SBC\@.
-Here the FC is generally stronger in CARS than in MOM01, a difference we noted earlier in the velocity maps (Fig.\,\ref{f03_fig1_}), with a westward transport in the observations up to \SI{6}{Sv} stronger.
-In CARS, $\mathcal{U}\sub{FC}$ suddenly becomes
-weaker between \ang{117} and \ang{116}E
-because of the meridional spreading of the FC noted earlier (Fig.\,\ref{f03_fig1_}a,b).
-Otherwise the spatial trends between CARS
-and MOM01 are similar.
+Here the FC is generally stronger in CARS than in MOM01, with a westward transport in the observations up to \SI{6}{Sv} stronger.
 Both in CARS and MOM01,
 the transport undergoes
 a sudden loss in westward transport
 because of the Tasman Leakage
 (see also Fig.\,\ref{f03_fig1_}).
-In the model, it varies from $\mathcal{U}\sub{FC} = \SI{-11}{Sv}$
-at South East Cape to around zero near Portland (a negative transport is westward). The FC then intensifies along the slanted coast to reach \SI{-1.8}{Sv} at the eastern Great Australian Bight; and along the zonal coast to reach \SI{-7.7}{Sv} at Cape Pasley and \SI{-12.3}{Sv} at Cape Leeuwin (Fig.\,\ref{SACS_complex}). In contrast to the SBC,
+The loss varies from $\mathcal{U}\sub{FC} = \SI{-11}{Sv}$
+at South East Cape to around zero near Portland (a negative transport is westward). 
+The fact that the FC transport goes to zero past the Tasman Leakage suggests that the Tasman Leakage flow is in fact not carried over by the FC. Here, a Tasman Leakage retroflection along the western Tasmanian shelf is not obvious in our transport budget, which is consistent with \citepos{Speich2002,vanSebille2012,vanSebille2014} description of the Tasman Leakage-to-FC connection.
+The FC then intensifies along the slanted coast to reach \SI{-1.8}{Sv} at the eastern Great Australian Bight; and along the zonal coast to reach \SI{-7.7}{Sv} at Cape Pasley and \SI{-12.3}{Sv} at Cape Leeuwin. In contrast to the SBC,
 the FC thus intensifies systematically as it flows westward.
 
 The exchanges between the FC and the SBC are relatively insignificant in determining this increase in the FC transport as the main contributors to the FC strengthening are the
@@ -511,33 +472,9 @@ across the FC's southern boundary (Eq.\,\ref{eq:8}).
 The spatial structure of the change
 in $\mathcal{U}\sub{FC}$ therefore mirrors
 that of $\mathcal{V}\sub{OF}$ (Fig.\,\ref{f04_fig1_}c).
-
-Between South East Cape and \ang{143}E, there is a large outflow of \SI{-11}{Sv},
-which is the Tasman Leakage.
-From South East Cape to Portland (the Zeehan Current region), the Tasman Leakage loss, the exchanges between the SBC and the FC, and small inputs by onshore flows, result in a zero FC transport at Portland.
-In what follows, we describe how $\mathcal{U}\sub{FC}$ changes
-in relation to $\mathcal{V}\sub{OF}$, ignoring exchanges with the SBC\@.
-%
-Between Portland and the eastern Great Australian Bight (the slanted South Australian Current region), the onshore flows provide +\SI{2.1}{Sv} to the FC producing a \SI{-1.9}{Sv} FC transport.
-Along the zonal coast, between the eastern Bight
-and Cape Pasley (the zonal South Australian Current region), the onshore flows provide a large +\SI{5.9}{Sv} input that
-accelerates the FC to \SI{-7.8}{Sv}. Finally, between Cape Pasley and Cape Leeuwin (the Leeuwin Current Extension region), the onshore flows provide a +\SI{3.5}{Sv} input further accelerating the FC to \SI{-12.3}{Sv} (Fig.\,\ref{SACS_complex}).
-
-As an aside, we note that we calculated the accumulated vertical transport along the FC's bottom boundary across $z\sub{ref}$ (Fig.\,\ref{f04_fig1_}c cyan lines and Fig.\,\ref{f02_fig1_}i--p cyan lines).
-In our geostrophic calculation, vertical velocity is adjusted to vanish at $z\sub{ref}$.
-In the actual velocity field of MOM01, there is a total
-upward transport across the \SI{2000}{\meter} depth level of about +\SI{0.25}{Sv}
-between South East Cape and Cape Leeuwin, which is very small compared to the FC's large westward transport.
-This demonstrates that our choice $z\sub{ref} = \SI{2000}{m}$
-was suitable.
-
-In summary, the annual-mean FC is nearly absent off the western Tasmanian shelf and Bass Strait as the Tasman Leakage carries
-most
-of the westward flow off South East Cape into the South Australian Basin. Along the slanted shelf the FC is weak as the onshore flows feeding into the current are small. When the shelf becomes zonal,
-the onshore flows are much stronger, providing a large source water for the FC\@.
 Overall, after the Tasman Leakage loss (\SI{-11}{Sv}),
 the FC transport increases from zero to $\mathcal{U}\sub{FC} = \SI{-12.3}{Sv}$
-at Cape Leeuwin due to a net +\SI{11.8}{Sv} gain from the onshore flows (Fig.\,\ref{Slide1}). Out of this net inflow, 2.5\% occurs west of Tasmania, 17.8\% along the slanted shelf, 50\% in the zonal Great Australian Bight region and 29.7\% in the zonal shelf region from Cape Carnot to Cape Leeuwin. Therefore, nearly 80\% of the onshore flow contribution to the FC increase occurs along the zonal shelf. Another \SI{+0.5}{Sv} net gain from the SBC comes from downwelling flows which only contribute to about 4.1\% of the FC's total increase. 
+at Cape Leeuwin due to a net +\SI{11.8}{Sv} gain from the onshore flows. Out of this net inflow, 20.3\% occur along the slanted shelf (+\SI{2.4}{Sv}), 50\% in the zonal Great Australian Bight region (+\SI{5.9}{Sv}) and 29.7\% in the zonal shelf region from Cape Carnot to Cape Leeuwin (+\SI{3.5}{Sv}). Here, nearly 80\% of the onshore flow contribution to the FC increase occurs along the zonal shelf.
 
 \subsection{SBC and FC coupling}\label{SBC and FC coupling}
 The Southern Australian Current System transport budget revealed that a large part of the onshore flow into the FC is directly converted into increasing westward transport from close to zero along western Tasmania to \SI{12.3}{Sv} near the western side of Australia.
